--- a/Mission08_Team0310/Views/Home/Index.cshtml
+++ b/Mission08_Team0310/Views/Home/Index.cshtml
@@ -3,9 +3,5 @@
 }
 
 @model ToDoItem
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://learn.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
-</div>
-
-<p>@Model.TaskName</p>
+<h1>Welcome to our website!</h1> 
+<h3>View your quadrants and add more tasks if you'd like!</h3>
