corrected errors in repository pattern.

--- a/Mission08_Team0310/Views/Home/Index.cshtml
+++ b/Mission08_Team0310/Views/Home/Index.cshtml
@@ -3,5 +3,5 @@
 }
 
 @model ToDoItem
-<h1>Welcome to our website!</h1> 
-<h3>View your quadrants and add more tasks if you'd like!</h3>
+<h1>Welcome to Your Task Website!</h1> 
+<h3>View your quadrants and add more tasks using the navigation above!</h3>
